<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E3E0D8"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/titleName"
        android:layout_width="324dp"
        android:layout_height="59dp"
        android:layout_marginTop="44dp"
        android:background="#E3E1D8"
        android:fontFamily="@font/trader_joes"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/design_default_color_error"
        android:textSize="45sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.028"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/titleName2"
        android:layout_width="324dp"
        android:layout_height="59dp"
        android:layout_marginTop="104dp"
        android:background="#E3E1D8"
        android:fontFamily="@font/trader_joes"
        android:text="@string/name"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="45sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/titleNewUser"
        android:layout_width="331dp"
        android:layout_height="37dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="84dp"
        android:background="#E3E1D8"
        android:fontFamily="@font/trader_joes"
        android:text="@string/Register_New_User"
        android:textColor="@color/design_default_color_error"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleName" />

    <ScrollView
        android:layout_width="369dp"
        android:layout_height="467dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.703"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleNewUser"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/PersonName"
                android:layout_width="337dp"
                android:layout_height="92dp"
                android:layout_marginStart="16dp"
                android:ems="10"
                android:hint="@string/full_name"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:textColor="@color/red"
                android:textColorHint="@color/black" />

            <EditText
                android:id="@+id/editTextTextEmailAddress2"
                android:layout_width="326dp"
                android:layout_height="96dp"
                android:layout_marginStart="16dp"
                android:ems="20"
                android:hint="@string/email_address"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:textColor="@color/red"
                android:textColorHint="@color/black" />

            <EditText
                android:id="@+id/username"
                android:layout_width="326dp"
                android:layout_height="96dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:autofillHints="username"
                android:hint="@string/reg_User_Name2"
                android:inputType="textPersonName|text"
                android:textColor="@color/red"
                android:textColorHint="@color/black" />

            <EditText
                android:id="@+id/reg_password"
                android:layout_width="324dp"
                android:layout_height="91dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:autofillHints="password"
                android:hint="@string/reg_password"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textColorHint="@color/black" />

            <EditText
                android:id="@+id/reg_password2"
                android:layout_width="324dp"
                android:layout_height="91dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:autofillHints="password"
                android:hint="@string/reg_reenter_password"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textColorHint="@color/black" />

            <Button
                android:id="@+id/btnCreateAccount"
                android:layout_width="104dp"
                android:layout_height="54dp"
                android:layout_marginStart="120dp"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                android:text="@string/Next"
                android:textColor="#EFEBE9"
                android:textColorLink="@color/design_default_color_error"
                android:textSize="16sp" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>